--- a/css/layout.css
+++ b/css/layout.css
@@ -1,5 +1,5 @@
 body {
-	font-family: Helvetica, Arial, Verdana;
+	font-family: Bitter, Arial, Verdana;
 	background: #efefef url('../img/wood.jpg') repeat 0 0;
 	margin:15px 0 0 0;
 	font-size:12px;
